--- a/Prompt_Enhancement.ipynb
+++ b/Prompt_Enhancement.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "    def __init__(self) -> None:\n",
     "        self.messages = []\n",
-    "        GOOGLE_API_KEY=\"AIzaSyBaz13UTSLEsag18c_rHQ9yFUbX4sx3YYM\"\n",
+    "        GOOGLE_API_KEY=\"AI*************************\"\n",
     "        genai.configure(api_key=GOOGLE_API_KEY)\n",
-    "        os.environ['PINECONE_API_KEY'] = 'c8519fb3-b5b7-461e-afa7-0090e4a5fa43'\n",
+    "        os.environ['PINECONE_API_KEY'] = 'c***********************'\n",
     "        self.vector_db = self.load_vector_db()\n",
     "        self.chat = genai.GenerativeModel('gemini-1.5-flash').start_chat(history=[])\n",
     "        print(\"Test...\")\n",
